packages/web-qwik/src/components/blog/blog-card.module.scss
@keyframes blog-card-fade {
  from {
    opacity: 0;
    transform: translateX(1rem);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.blog-card {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  border-radius: 0.25rem;
  box-shadow: 0 0 0.125rem rgba(black, 0.2);
  overflow: hidden;
  cursor: pointer;

  animation-name: blog-card-fade;
  animation-duration: 400ms;
  animation-fill-mode: both;
  animation-iteration-count: 1;
  animation-delay: var(--delay);

  transition: background-color 200ms;

  background-color: rgba(white, 0.5);

  [data-theme="dark"] & {
    background-color: rgba(black, 0.1);
  }
}

.blog-card-link {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  transition:
    opacity 200ms,
    transform 200ms,
    background-color 200ms;

  &:hover {
    opacity: 0.9;
    transform: translateX(-1px) translateY(-1px);
    background-color: rgba(#aebed9, 0.15);
  }

  &:active {
    opacity: 0.7;
    transform: translateX(1px) translateY(1px);
    background-color: rgba(#a0d4b4, 0.15);
  }

  @container blog-card-list (min-width: 480px) {
    flex-direction: row;
  }
}

.blog-card-image {
  width: 100%;
  height: auto;
  aspect-ratio: 1140 / 600;
  object-fit: cover;

  @container blog-card-list (min-width: 480px) {
    width: 30%;
    height: auto;
  }
}

.blog-card-content {
  box-sizing: border-box;
  padding: 0.5rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;

  .side-card-content-description {
    opacity: 0.75;
  }
}

.blog-card-tag-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 0.5rem;
  padding: 0 0.5rem;
  height: 2.25rem;
  border-top: solid 1px rgba(gray, 0.2);

  background-color: rgba(white, 0.5);

  [data-theme="dark"] & {
    background-color: rgba(black, 0.2);
  }
}

.tag {
  box-sizing: border-box;
  padding: 0.5rem;
  border-radius: 0.25rem;
  transition: background-color 200ms;
  cursor: pointer;

  &:hover {
    background-color: rgba(#59a7b5, 0.1);
  }
}

